--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <div class="card">
                         <div class="overlay">
                             <span>Puzzel Game</span>
-                            <a href="https://puzzlegame20.netlify.app">HTML, CSS, javascript</a>
+                            <a href="https://puzzle-game0.netlify.app">HTML, CSS, javascript</a>
                         </div>
                         <img src="./image/puzzel.png" alt="">
                     </div>
