--- a/index.html
+++ b/index.html
@@ -205,28 +205,28 @@
                     <div class="card">
                         <div class="overlay">
                             <span>Quiz-Website</span>
-                            <a href="https://quizappn.netlify.app">HTML, CSS , javascript</a>
+                            <a href="https://quizeappt.netlify.app">HTML, CSS , javascript</a>
                         </div>
                         <img src="./image/quiz.png" alt="">
                     </div>
                     <div class="card">
                         <div class="overlay">
                             <span>Workout Website</span>
-                            <a href="https://zymfitness.netlify.app">HTML , CSS , javascript</a>
+                            <a href="https://strong-zym.netlify.app">HTML , CSS , javascript</a>
                         </div>
                         <img src="./image/zim.png" alt="">
                     </div>
                     <div class="card">
                         <div class="overlay">
                             <span>Calculator</span>
-                            <a href="https://calculatorhtmlcs.netlify.app">HTML, CSS, javascript</a>
+                            <a href="https://calculatornu.netlify.app">HTML, CSS, javascript</a>
                         </div>
                         <img src="./image/cal.png" alt="">
                     </div>
                     <div class="card">
                         <div class="overlay">
                             <span>To-Do-website</span>
-                            <a href="https://todoapplistfile.netlify.app">HTML , CSS, javascript</a>
+                            <a href="https://todo-app365.netlify.app">HTML , CSS, javascript</a>
                         </div>
                         <img src="./image/todo.png" alt="">
                     </div>
