--- a/index.html
+++ b/index.html
@@ -198,42 +198,42 @@
                     <div class="card">
                         <div class="overlay">
                             <span>Beauty-commerce</span>
-                            <a href="https://beautyfy.netlify.app">HTML , CSS , javascript</a>
+                            <a target="#" href="https://beautyfy.netlify.app">HTML , CSS , javascript</a>
                         </div>
                         <img src="./image/com.png" alt="">
                     </div>
                     <div class="card">
                         <div class="overlay">
                             <span>Quiz-Website</span>
-                            <a href="https://quizeappt.netlify.app">HTML, CSS , javascript</a>
+                            <a target="#" href="https://quizeappt.netlify.app">HTML, CSS , javascript</a>
                         </div>
                         <img src="./image/quiz.png" alt="">
                     </div>
                     <div class="card">
                         <div class="overlay">
                             <span>Workout Website</span>
-                            <a href="https://strong-zym.netlify.app">HTML , CSS , javascript</a>
+                            <a target="#" href="https://strong-zym.netlify.app">HTML , CSS , javascript</a>
                         </div>
                         <img src="./image/zim.png" alt="">
                     </div>
                     <div class="card">
                         <div class="overlay">
                             <span>Calculator</span>
-                            <a href="https://calculatornu.netlify.app">HTML, CSS, javascript</a>
+                            <a target="#" href="https://calculatornu.netlify.app">HTML, CSS, javascript</a>
                         </div>
                         <img src="./image/cal.png" alt="">
                     </div>
                     <div class="card">
                         <div class="overlay">
                             <span>To-Do-website</span>
-                            <a href="https://todo-app365.netlify.app">HTML , CSS, javascript</a>
+                            <a target="#" href="https://todo-app365.netlify.app">HTML , CSS, javascript</a>
                         </div>
                         <img src="./image/todo.png" alt="">
                     </div>
                     <div class="card">
                         <div class="overlay">
                             <span>Puzzel Game</span>
-                            <a href="https://puzzle-game0.netlify.app">HTML, CSS, javascript</a>
+                            <a target="#" href="https://puzzle-game0.netlify.app">HTML, CSS, javascript</a>
                         </div>
                         <img src="./image/puzzel.png" alt="">
                     </div>
